--- a/scss/base/_generals.scss
+++ b/scss/base/_generals.scss
@@ -7,7 +7,7 @@
     box-sizing: border-box;
     color: $text-main-color;
     scroll-behavior: smooth;
-   
+
 }
 
 .grid__container {
@@ -23,23 +23,29 @@
         "main"
         "footer";
 
-    h1 {
-        @include tipografias(Bungee, 2rem, 400, 2.75rem, left, uppercase, none, 0.1rem);
-    }
+
+}
+
+h1 {
+    @include tipografias(Bungee, 2rem, 400, 2.75rem, left, uppercase, none, 0.1rem);
 }
 
 h2 {
     @include tipografias(Bungee, 1.75rem, 400, 2.5rem, left, uppercase, none, 0.1rem);
-    color:$text-color-accent;
+    color: $text-color-accent;
 }
 
 h3 {
     @include tipografias(Bungee, 1rem, 400, 2rem, center, uppercase, none, 0.1rem);
 }
+//h5b de la card js
+.card-title{
+    @include tipografias(Bungee, 1rem, 300, 2rem, center, uppercase, none, 0.1rem); 
+}
 
 h4 {
     @include tipografias(Bungee, 0.8rem, 400, 1.1rem, left, uppercase, none, 0.1rem);
-    color:$text-color-accent;
+    color: $text-color-accent;
 }
 
 p {
@@ -59,6 +65,20 @@ a {
 button {
     @include tipografias(Inconsolata, 1.1rem, 400, 2rem, center, uppercase, none, 0.1rem);
     padding: 1% 5%;
+    border: none;
+    border-radius: 20px;
+    color: $text-color-accent;
+    background-color: $bg-brown;
+    transition: 2s;
+
+    &:hover {
+        transform: scale(0.9);
+    }
+}
+//boton card del js
+#miBoton{
+    @include tipografias(Inconsolata, 1.1rem, 400, 2rem, center, uppercase, none, 0.1rem);
+    padding: 2% 6%;
     border: none;
     border-radius: 20px;
     color: $text-color-accent;
