--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10308,4 +10308,24 @@ button:hover {
   background-color: #E2B2C1;
 }
 
+.main {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+#cartasTarot {
+  display: grid;
+  grid-template-columns: repeat(3, 15rem);
+  grid-template-rows: repeat(1, 20rem);
+}
+
+.frente,
+.dorso {
+  width: 100%;
+  height: 100%;
+}
+
 /*# sourceMappingURL=estilos.css.map */
