--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10308,24 +10308,39 @@ button:hover {
   background-color: #E2B2C1;
 }
 
-.main {
-  height: 100vh;
+.main .juegoTarot {
+  width: 80%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+  flex-wrap: no-wrap;
+  margin: 4% auto;
+  padding: 0%;
 }
-
-#cartasTarot {
+.main .juegoTarot #cartasTarot {
   display: grid;
   grid-template-columns: repeat(3, 15rem);
   grid-template-rows: repeat(1, 20rem);
+  gap: 3rem;
+  perspective: 800px;
 }
-
-.frente,
-.dorso {
+.main .juegoTarot .cartaTarot {
+  position: relative;
+  transform-style: preserve-3d;
+  transition: all 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+.main .juegoTarot .frente,
+.main .juegoTarot .dorso {
   width: 100%;
   height: 100%;
+  position: absolute;
+}
+.main .juegoTarot .dorso {
+  backface-visibility: hidden;
+}
+.main .juegoTarot .toggleCard {
+  transform: rotateY(180deg);
 }
 
 /*# sourceMappingURL=estilos.css.map */
