--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10308,39 +10308,21 @@ button:hover {
   background-color: #E2B2C1;
 }
 
-.main .juegoTarot {
-  width: 80%;
+.main #juegotarot {
+  width: 60%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-wrap: no-wrap;
-  margin: 4% auto;
+  flex-wrap: wrap;
+  margin: 4% auto 8% auto;
   padding: 0%;
 }
-.main .juegoTarot #cartasTarot {
-  display: grid;
-  grid-template-columns: repeat(3, 15rem);
-  grid-template-rows: repeat(1, 20rem);
-  gap: 3rem;
-  perspective: 800px;
+.main #juegotarot #cartasTarot {
+  align-items: center;
 }
-.main .juegoTarot .cartaTarot {
-  position: relative;
-  transform-style: preserve-3d;
-  transition: all 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-}
-.main .juegoTarot .frente,
-.main .juegoTarot .dorso {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-}
-.main .juegoTarot .dorso {
-  backface-visibility: hidden;
-}
-.main .juegoTarot .toggleCard {
-  transform: rotateY(180deg);
+.main #juegotarot #sacarcarta {
+  align-items: center;
 }
 
 /*# sourceMappingURL=estilos.css.map */
