--- a/scss/pages/_tarot.scss
+++ b/scss/pages/_tarot.scss
@@ -1,42 +1,17 @@
 .main {
-    .juegoTarot {
-        @include flex (80%, flex, column, center, center, no-wrap, 4% auto, 0%);
+  #juegotarot {
+    @include flex(60%, flex, column, center, center, wrap, 4% auto 8% auto, 0%);
 
-        #cartasTarot {
-            display: grid;
-            grid-template-columns: repeat(3, 15rem);
-            grid-template-rows: repeat(1, 20rem);
-            gap: 3rem;
-            perspective: 800px;
-        }
+    #cartasTarot {
+      align-items: center;
 
-        .cartaTarot {
-            position: relative;
-            transform-style: preserve-3d;
-            transition: all 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 
-        }
-
-        .frente,
-        .dorso {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-        }
-
-        .dorso {
-            //background: pink;
-            backface-visibility: hidden;
-        }
-
-        .toggleCard {
-            transform: rotateY(180deg);
-        }
     }
+
+    #sacarcarta {
+      align-items: center;
+    }
+  }
+
+
 }
-
-
-
-
-
-//background: url(../icons/bk_card.png);
