--- a/scss/base/_generals.scss
+++ b/scss/base/_generals.scss
@@ -76,7 +76,7 @@ button {
     }
 }
 //boton card del js
-#miBoton{
+#boton{
     @include tipografias(Inconsolata, 1.1rem, 400, 2rem, center, uppercase, none, 0.1rem);
     padding: 2% 6%;
     border: none;
