--- a/scss/pages/_tarot.scss
+++ b/scss/pages/_tarot.scss
@@ -1,17 +1,38 @@
 .main {
-  #juegotarot {
-    @include flex(60%, flex, column, center, center, wrap, 4% auto 8% auto, 0%);
+  .juego {
+    @include flex(90%, flex, column, center, center, no-wrap, auto, 0%);
+    background-image: url(../icons/bk_card.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 80vh;
 
     #cartasTarot {
-      align-items: center;
+      @include flex(100%, flex, column, center, center, no-wrap, auto, 0%);
+      height: 80vh;
+      background-color: $main-bg;
 
-
+      .enlaceTexto {
+        color: $text-color-accent;
+        background-color: $bg-brown;
+      }
+    }
+    h2{
+      color: $bg-coral;
+      font-size: 1rem;
     }
 
-    #sacarcarta {
-      align-items: center;
+    #sacarCarta {
+      background-color: $main-bg;
+      transition: 2s;
+      justify-content: flex-start;
+      width: 100%;
+      height: 15vh;
+
+      &:hover {
+        transform: scale(1.1);
+        background-color: $main-bg;
+      }
     }
   }
-
-
 }
