--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,9 +1,12 @@
 //background
 $main-bg:#FAF9E5;
-$bg-green: #58CAA8;
-$bg-rose: #E2B2C1;
-$bg-brown:  #D6A578;
+$bg-green: #c1d7ae;
+$bg-rose: #dcbde3;
+$bg-brown:  #d2a67c;
+$bg-darkbrown:#C88342;
+$bg-lightbrown: #deb792;
 $bg-coral:  #F2766A;
+
 
 //text
 $text-main-color: #262626;
