--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,7 +1,7 @@
 //background
 $main-bg:#FAF9E5;
-$bg-green: #c1d7ae;
-$bg-rose: #dcbde3;
+$bg-lightblue: #bdd1e2;
+$bg-rose: #dac5bf;
 $bg-brown:  #d2a67c;
 $bg-darkbrown:#C88342;
 $bg-lightbrown: #deb792;
