--- a/scss/pages/_tarot.scss
+++ b/scss/pages/_tarot.scss
@@ -1,38 +1,45 @@
 .main {
-  .juego {
-    @include flex(90%, flex, column, center, center, no-wrap, auto, 0%);
-    background-image: url(../icons/bk_card.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: contain;
-    height: 80vh;
+  .juegoDeTarot {
+    @include flex (90%, flex, column, center, center, wrap, 4% auto, 0%);
+
+    h1 {
+      margin: 3% auto;
+    }
+
+    p {
+      margin: 3%;
+      text-align: justify;
+    }
 
     #cartasTarot {
-      @include flex(100%, flex, column, center, center, no-wrap, auto, 0%);
-      height: 80vh;
-      background-color: $main-bg;
+      @include flex (60%, flex, column, center, center, wrap, 4% auto, 0%);
+
+      .card {
+        background-color: $main-bg;
+        border: none;
+      }
 
       .enlaceTexto {
         color: $text-color-accent;
         background-color: $bg-brown;
       }
     }
-    h2{
+
+    h2 {
       color: $bg-coral;
       font-size: 1rem;
     }
 
     #sacarCarta {
-      background-color: $main-bg;
+      background-color: transparent;
       transition: 2s;
-      justify-content: flex-start;
-      width: 100%;
-      height: 15vh;
 
       &:hover {
-        transform: scale(1.1);
-        background-color: $main-bg;
+        transform: scale(0.9);
+
       }
     }
   }
+
+
 }
